--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "express": "^4.16.4",
     "gojs": "^2.0.0",
+    "jQuery": "^1.7.4",
     "mysql": "^2.16.0",
     "p5": "^0.7.3"
   }
